<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>app</groupId>
    <artifactId>mud-server-java</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>mud-server-java</name>
    <description>Portage Java/Spring Boot du serveur MUD PHP (TCP/JSON, Netty, virtual threads, jOOQ)</description>

    <properties>
        <java.version>25</java.version>
        <netty.version>4.2.16.Final</netty.version>
        <sqlite-jdbc.version>3.53.2.1</sqlite-jdbc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-bom</artifactId>
                <version>${netty.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Core Spring Boot, sans web/webflux/tomcat : pas de surface HTTP, Netty est câblé
             manuellement en TCP brut (pas l'intégration reactive-Netty de Spring, pensée pour du HTTP). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <!-- Actuator (/health, /info, /metrics) pour donner à un opérateur un signal
             autre que la ligne de log de démarrage. spring-boot-starter-web est là
             uniquement pour porter ces endpoints HTTP (Tomcat + infrastructure MVC dont
             Actuator a besoin pour son propre DispatcherServlet) — aucun trafic
             applicatif ne passe par ce serveur web, le protocole de jeu reste le TCP/JSON
             brut sur Netty (voir management.server.port séparé du port du jeu dans
             application.yml). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Persistance : jOOQ (DSLContext) plutôt qu'un ORM classique - pas de
             persistence-context/lazy-loading à gérer hors transaction (voir les 21 sites
             d'appel de DAO qui ne tournent jamais dans une transaction). Apporte aussi
             HikariCP + DataSource autoconfigurée (spring-boot-starter-jooq tire
             spring-boot-starter-jdbc en transitif). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jooq</artifactId>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite-jdbc.version}</version>
        </dependency>

        <!-- Migrations de schéma. Depuis Spring Boot 4, l'autoconfiguration Flyway a été
             extraite de spring-boot-autoconfigure (devenu minimal) vers ce starter dédié
             (module spring-boot-flyway) — un simple flyway-core sur le classpath ne suffit
             plus à faire tourner les migrations au démarrage. flyway-database-nc-sqlite
             reste requis séparément (Flyway 10+ a sorti les dialectes de flyway-core) ;
             version épinglée manuellement car non gérée par le BOM Spring Boot (seuls les
             dialectes commerciaux/historiques comme flyway-database-postgresql le sont). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-flyway</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-nc-sqlite</artifactId>
            <version>12.4.0</version>
        </dependency>

        <!-- Transport TCP/JSON brut -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-handler</artifactId>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-codec</artifactId>
        </dependency>

        <!-- Hash de mot de passe (BCrypt) sans tirer toute la chaîne de filtres servlet
             de spring-boot-starter-security, inutile pour un transport TCP/JSON brut. -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
        </dependency>

        <!-- Lecture de data/items.json (fixtures item_template). spring-boot-starter-json
             plutôt que jackson-databind seul : depuis Spring Boot 4, l'autoconfiguration
             Jackson (le bean ObjectMapper) vit dans le module dédié spring-boot-jackson,
             tiré par ce starter — même pattern que spring-boot-starter-flyway (voir plus haut). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-json</artifactId>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <!-- build-info alimente META-INF/build-info.properties, lu par Actuator
                     pour peupler /actuator/info (nom/version/heure de build) plutôt que de
                     répondre un objet vide. -->
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Génère les classes DSL jOOQ (Tables/Records) à partir du SQL Flyway
                 directement (org.jooq.meta.extensions.ddl.DDLDatabase), sans se connecter à
                 une vraie base au build : Flyway reste l'unique source de vérité du schéma,
                 jOOQ ne fait que le refléter. -->
            <plugin>
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <executions>
                    <execution>
                        <id>generate-jooq-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-meta-extensions</artifactId>
                        <version>${jooq.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <generator>
                        <database>
                            <name>org.jooq.meta.extensions.ddl.DDLDatabase</name>
                            <properties>
                                <property>
                                    <key>scripts</key>
                                    <value>src/main/resources/db/migration/V*.sql</value>
                                </property>
                                <property>
                                    <key>sort</key>
                                    <value>semantic</value>
                                </property>
                                <property>
                                    <key>defaultNameCase</key>
                                    <value>lower</value>
                                </property>
                            </properties>
                        </database>
                        <target>
                            <packageName>app.persistence.jooq</packageName>
                            <directory>target/generated-sources/jooq</directory>
                        </target>
                    </generator>
                </configuration>
            </plugin>
            <!-- Formatage/lint Java. Le formatter Eclipse est utilisé plutôt que
                 google-java-format : ce dernier (ainsi que le pas removeUnusedImports, qui en
                 dépend) s'appuie sur des API internes de javac cassées par Java 25
                 (com.sun.tools.javac.util.Log$DeferredDiagnosticHandler#getDiagnostics a changé
                 de type de retour) - voir https://github.com/diffplug/spotless/issues/2468.
                 `mvn spotless:check` tourne en phase verify (donc pas pendant `mvn test`) ;
                 corriger le formatage avec `mvn spotless:apply`. -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <java>
                        <eclipse/>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                        <indent>
                            <spaces>true</spaces>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
